<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#000000"
                android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/gf_title_bar_height"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/gf_title_bar_height"
            android:layout_height="@dimen/gf_title_bar_height"
            android:layout_gravity="center_vertical"
            android:scaleType="centerInside"
            android:src="@drawable/ic_gf_back"
            />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/iv_back"
            android:text="@string/preview"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/tv_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="0/0"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_choose_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_btn_selector"
            android:padding="6dp"
            android:layout_centerVertical="true"
            android:text="@string/send"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            />

    </RelativeLayout>

    <com.dingbei.diagnose.gallery.widget.GFViewPager
        android:id="@+id/vp_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/titlebar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:background="#f2434448"
        android:clickable="true">

        <TextView
            android:id="@+id/tv_select"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:drawableLeft="@drawable/choose_selector"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/select"
            android:textColor="#fff"
            android:textSize="16sp"
            />

    </RelativeLayout>

</RelativeLayout>