<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2014 pengjianbo(pengjianbosoft@gmail.com), Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white">

    <RelativeLayout
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="#393a3f"
        >

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center_vertical"
            android:scaleType="centerInside"
            android:src="@drawable/ic_gf_back"
            android:focusable="true"
            android:foreground="@drawable/sel_tv_focusable"/>

        <LinearLayout
            android:id="@+id/ll_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/iv_back"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:focusable="true"
            android:foreground="@drawable/sel_tv_focusable">

            <TextView
                android:id="@+id/tv_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_photo"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_folder_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="-2.5dp"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/ll_title"
            android:src="@drawable/ic_gf_triangle_arrow"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/iv_take_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:layout_marginRight="70dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_gf_camera"
                android:visibility="visible"
                />

            <TextView
                android:id="@+id/tv_choose_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/bg_btn_theme"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/send"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:focusable="true"
                android:foreground="@drawable/sel_tv_focusable_blue"/>
        </LinearLayout>

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/titlebar"
        android:background="#000"
        >

        <GridView
            android:id="@+id/gv_photo_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:cacheColorHint="@android:color/transparent"
            android:clipToPadding="false"
            android:fadingEdge="none"
            android:horizontalSpacing="2dp"
            android:verticalSpacing="2dp"
            />

        <TextView
            android:id="@+id/tv_empty_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/waiting"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            />
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:background="#f2434448"
        android:clickable="true">

        <TextView
            android:id="@+id/tv_clear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/clear"
            android:textColor="#fff"
            android:textSize="16sp"
            android:focusable="true"
            android:foreground="@drawable/sel_tv_focusable"/>

        <TextView
            android:id="@+id/tv_preview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/preview_photo"
            android:textColor="#fff"
            android:textSize="16sp"
            android:focusable="true"
            android:foreground="@drawable/sel_tv_focusable"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_folder_panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="44dp"
        android:orientation="vertical"
        android:visibility="gone"
        >

        <ListView
            android:id="@+id/lv_folder_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E6000000"
            android:backgroundTint="@android:color/white"
            android:cacheColorHint="@android:color/transparent"
            android:divider="#d2d2d7"
            android:dividerHeight="0.5dp"
            />
    </LinearLayout>

</RelativeLayout>